# bath-hack-26

./: .gitmodules  LICENSE  README.md  main.c  pranked.c
arduino-test/main/: main.ino
presentation/: main.typ
serial-test/: pyproject.toml
trickle-down-dragonslayer/: Makefile  README.md  basic2tape.sh  pyproject.toml
trickle-down-dragonslayer/src/basic/: main.bas
trickle-down-dragonslayer/src/trickle_down_dragonslayer/: __init__.py
