[project]
name = "trickle-down-dragonslayer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "peterc-s", email = "petercs@purelymail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
trickle-down-dragonslayer = "trickle_down_dragonslayer:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
